minor padding/spacing/style fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
+/* GLOBAL */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
+}
+
+html {
+  scroll-padding-top: 5.5rem;
 }
 
 body {
@@ -12,41 +16,12 @@ body {
   background-color: white;
   width: 100%;
   height: 100%;
+  overscroll-behavior: none;
 }
 
+/* UTILITY */
 hr {
   background-color: white;
-}
-
-.divider {
-  background-color: #eee;
-}
-
-#banner {
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(
-      rgba(255, 255, 255, 0.3),
-      rgba(255, 255, 255, 0.3)
-    ),
-    url("../img/nigiri.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  box-shadow: 10px 10px 10px #000;
-}
-
-.logo-main {
-  /* width: 45rem; */
-  max-width: 100%;
-  height: auto;
-}
-
-.mission {
-  /* border-bottom: 1px solid black; */
-  color: white;
-  background-color: black;
 }
 
 .nopadding {
@@ -54,11 +29,62 @@ hr {
   margin: 0 !important;
 }
 
+/* NAVBAR */
+.navbar {
+  background-color: #fff !important;
+}
+
+/* BANNER */
+#banner {
+  width: 100%;
+  height: 100%;
+  margin-top: 5.54rem;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.2),
+      rgba(255, 255, 255, 0.2)
+    ),
+    url("../img/nigiri.jpg") no-repeat top center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.logo-main {
+  width: 50rem;
+  max-width: 100%;
+  height: auto;
+}
+
+/* DIVIDER */
+.divider {
+  background-color: #f1f3f5;
+}
+
+/* ABOUT */
+#about {
+  border-bottom: 0.5rem solid black;
+}
+
+#about img {
+  object-fit: cover;
+}
+
+.mission {
+  color: white;
+  background-color: black;
+}
+
+.mission h2 {
+  letter-spacing: 0.6rem;
+}
+
+/* BOOKING */
 #booking {
   min-width: 100%;
-  height: 500px;
+  height: 60vh;
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url("../img/omakase.png") no-repeat center left fixed;
+    url("../img/omakase.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -66,10 +92,20 @@ hr {
   box-shadow: 10px 10px 10px #000;
 }
 
-#about > img {
+/* FOOTER */
+footer {
   width: 100%;
+  height: 100%;
+  background-color: black;
+  color: white;
 }
-/* Media query */
+
+#contact {
+  padding: 6rem 0;
+  font-size: 0.5rem;
+}
+
+/* MEDIA QUERIES */
 @media (min-width: 576px) {
   #intro {
     height: 600px;
